--- a/formulario/src/app/agregar/agregar.component.html
+++ b/formulario/src/app/agregar/agregar.component.html
@@ -6,8 +6,7 @@
         </div>
         <div *ngIf="formularioCreado.controls['nombre'].invalid && formularioCreado.controls['nombre'].dirty"
             class="alert alert-danger" role="alert">
-
-            <span *ngIf!="formularioCreado.controls['nombre'].errors.required">El nombre es requerido</span>
+            <span *ngIf="formularioCreado.controls['nombre'].errors!.required">El nombre es requerido</span>
         </div>
 
         <div class="form-group">
@@ -16,28 +15,38 @@
 
             <div *ngIf="formularioCreado.controls['correo'].invalid && formularioCreado.controls['correo'].dirty">
 
-                <div *ngIf!="formularioCreado.controls['correo'].errors.required" class="alert alert-danger"
+                <div *ngIf="formularioCreado.controls['correo'].errors!.required" class="alert alert-danger"
                     role="alert">
                     El correo es requerido
                 </div>
-                <div *ngIf!="formularioCreado.controls['nombre'].errors.email" class="alert alert-danger" role="alert">
+                <div *ngIf="formularioCreado.controls['correo'].errors!.email" class="alert alert-danger" role="alert">
                     No parece un correo valido
                 </div>
             </div>
         </div>
 
-
-
         <div class="form-group">
-            <label>Contrasena</label>
-            <input type="password" class="form-control" formControlName="contrasena">
+            <label>Password</label>
+            <input type="password" class="form-control" formControlName="password">
+
+            <div *ngIf="formularioCreado.controls['password'].invalid && formularioCreado.controls['password'].dirty">
+
+                <div *ngIf="formularioCreado.controls['password'].errors!.required" class="alert alert-danger"
+                    role="alert">
+                    la contrasena es requerida
+                </div>
+
+                <div *ngIf="formularioCreado.controls['password'].errors!.minlength" class="alert alert-danger"
+                    role="alert">
+                    la contrasena debe tener al menos 8 digitos
+                </div>
+            </div>
+
+
+
         </div>
-        <div class="alert alert-danger" role="alert">
-            La contrasena es requerida
-        </div>
-        <div class="alert alert-danger" role="alert">
-            La contrasena debe tener al menos 8 caracteres
-        </div>
+
+
         <button [disabled]="!formularioCreado.valid" class="btn btn-primary" (click)="agregar()">Agregar</button>
 
 
